templates/deployment-eap71-tim.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: eap71-openshift-tim
  labels:
    app: jboss
    service: eap71-openshift-tim
  namespace: jbosstest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jboss
      service: eap71-openshift-tim
  template:
    metadata:
      labels:
        app: jboss
    spec:
      containers:
      - name: eap71-openshift-tim
        image: sv-arg-reg-i1.argenta.be:5000/jbosstest/eap71-openshift:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
