templates/deployment-eap71.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: eap71-openshift
  labels:
    app: jboss
    service: eap71-openshift
  namespace: jbosstest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: eap71-openshift
        image: sv-arg-reg-i1.argenta.be:5000/jbosstest/eap71-openshift:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
