templates/deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: jboss-as-a-service
    application: ${APPLICATION_NAME}
  name: ${APPLICATION_NAME}
  namespace: ci00000000-argentatest-01
spec:
  replicas: 1
  selector:
    deploymentConfig: ${APPLICATION_NAME}
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        application: ${APPLICATION_NAME}
        deploymentConfig: ${APPLICATION_NAME}
      name: ${APPLICATION_NAME}
    spec:
      containers:
        - image: ${APPLICATION_NAME}:${VERSION}
          imagePullPolicy: Always
          name: ${APPLICATION_NAME}
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 60
  test: false
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - ${APPLICATION_NAME}
        from:
          kind: ImageStreamTag
          name: '${APPLICATION_NAME}:latest'
          namespace: ci00000000-argentatest-01
      type: ImageChange
    - type: ConfigChange
