templates/eap71-tim-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eap71-openshift-tim
spec:
  type: ClusterIP
  selector: 
    service: eap71-openshift-tim
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
