templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The web servers http port.
  labels:
    application: ${APPLICATION_NAME}
  name: ${APPLICATION_NAME}
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    deploymentConfig: ${APPLICATION_NAME}
