templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    application: ${APPLICATION_NAME}
  name: ${APPLICATION_NAME}
  namespace: ${NAMESPACE}
spec:
  host: ${APPLICATION_NAME}-ci00000000-argentatest-01.apps.openshift.cegeka.com
  to:
    kind: Service
    name: ${APPLICATION_NAME}
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - host: ${APPLICATION_NAME}-ci00000000-argentatest-01.apps.openshift.cegeka.com
      routerName: router
      wildcardPolicy: None
